compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__consts__pub_const_equal_to_private_function.snap
---
source: compiler-core/src/erlang/tests/consts.rs
assertion_line: 70
expression: "\n          fn identity(a) {\n            a\n          }\n\n          pub const id = identity\n        "
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([identity/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec identity(I) -> I.
identity(A) ->
    A.
