compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__consts__pub_const_equal_to_record_with_nested_private_function_field.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\n          fn identity(a) {\n            a\n          }\n\n          pub record Mapper<b> {\n            Mapper(fn(b) -> b)\n          }\n\n          pub record Funcs<b> {\n            Funcs(mapper: Mapper(b))\n          }\n\n          pub const id_mapper = Funcs(Mapper(identity))\n        "
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([identity/1]).
-export_type([mapper/1, funcs/1]).

-type mapper(I) :: {mapper, fun((I) -> I)}.

-type funcs(J) :: {funcs, mapper(J)}.

-file("/root/project/test/my/mod.rakun", 2).
-spec identity(K) -> K.
identity(A) ->
    A.
