compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__consts__record_constructor_in_tuple.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\npub record X {\n  X(Int)\n}\n\npub const z = #(X)\n\npub fn main() {\n  z\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).
-export_type([x/0]).

-type x() :: {x, integer()}.

-file("/root/project/test/my/mod.rakun", 8).
-spec main() -> {fun((integer()) -> x())}.
main() ->
    {fun(Field@0) -> {x, Field@0} end}.
